add basic html,css

--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -8,7 +8,39 @@
     </head>
 
     <body>
-        TESTING...
+        <div class="grid-container">
+            <div class="header">
+                <h1>Pokemon Data Viewer</h1>
+            </div>
+
+            <div class="main-content">
+                <h2>Pokemon details for</h2>
+                <h3>Pokedex number: <span id="pokedex">#0</span></h3>
+                <h3>Description</h3>
+                <p id="description"></p>
+            </div>
+
+            <div class="left-sidebar">
+                <h3>All Pokemon</h3>
+
+                <div id="all-pokemon">
+
+                </div>
+
+            </div>
+
+            <div class="right-sidebar">
+                <h3>Type Info</h3>
+                <h4>On offense:</h4>
+                <h4>On defense:</h4>
+            </div>
+
+            <div class="footer">
+                <p>Pokemon Data Viewer created by Wan-Ling Chang</p>
+                <a href="https://www.pokemon.com/">Official Pokemon Page</a>
+            </div>
+
+        </div>
     </body>
 
 </html>
