--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -14,19 +14,17 @@
             </div>
 
             <div class="main-content">
-                <h2>Pokemon details for</h2>
-                <h3>Pokedex number: <span id="pokedex">#0</span></h3>
+                <h2>Pokemon details for<span id="name"></span></h2>
+                <div id="img-container"></div>
+                <h3>Pokedex number: #<span id="pokedex">0</span></h3>
                 <h3>Description</h3>
                 <p id="description"></p>
             </div>
 
             <div class="left-sidebar">
                 <h3>All Pokemon</h3>
-
-                <div id="all-pokemon">
-
-                </div>
-
+                <table id="all-pokemon">
+                </table>
             </div>
 
             <div class="right-sidebar">
