type info update

--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -29,8 +29,11 @@
 
             <div class="right-sidebar">
                 <h3>Type Info</h3>
+                <p><span id="selectedokemon"></span>'s type(s):<span id="typelist"></span></p>
                 <h4>On offense:</h4>
+                <div id="offense" class="typeinfo"></div>
                 <h4>On defense:</h4>
+                <div id="defense" class="typeinfo"></div>
             </div>
 
             <div class="footer">
