--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -11,6 +11,8 @@
         <div class="grid-container">
             <div class="header">
                 <h1>Pokemon Data Viewer</h1>
+                <img id="egg" src="./assets/pngegg.png" alt="egg" title="egg">
+                <img id="bullsaur" src="./assets/bullsaur.png" alt="bullsaur" title="bullsaur">
             </div>
 
             <div class="main-content">
