--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -10,9 +10,9 @@
     <body>
         <div class="grid-container">
             <div class="header">
-                <h1>Pokemon Data Viewer</h1>
-                <img id="egg" src="./assets/pngegg.png" alt="egg" title="egg">
-                <img id="bullsaur" src="./assets/bullsaur.png" alt="bullsaur" title="bullsaur">
+                <img id="flippokemon" src="./assets/charmander.png" alt="rotate" title="rotate">
+                <h1>Pokemon Data Viewer </h1>
+                <img id="movepokemon" src="./assets/pngegg.png" alt="move" title="move">
             </div>
 
             <div class="main-content">
