add gavorite button

--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -16,7 +16,14 @@
             </div>
 
             <div class="main-content">
-                <h2>Pokemon details for <span id="name"></span></h2>
+                <div id="main-h2">
+                    <h2>Pokemon details for <span id="name"></span>
+                    </h2>
+                    <button id="btn-like">
+                        <img id="img-like" src="./assets/favorite.png" alt="f" title="f">
+                        Add to favorite
+                    </button>
+                </div>
                 <div id="img-container"></div>
                 <h3>Pokedex number: #<span id="pokedex">0</span></h3>
                 <h3>Description</h3>
@@ -36,6 +43,10 @@
                 <div id="offense" class="typeinfo"></div>
                 <h4>On defense:</h4>
                 <div id="defense" class="typeinfo"></div>
+            </div>
+
+            <div class="favorite">
+                <h3>Favorites</h3>
             </div>
 
             <div class="footer">
