add favorite funcion

--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -19,9 +19,9 @@
                 <div id="main-h2">
                     <h2>Pokemon details for <span id="name"></span>
                     </h2>
-                    <button id="btn-like">
-                        <img id="img-like" src="./assets/favorite.png" alt="f" title="f">
-                        Add to favorite
+                    <button id="btn-like" value="like">
+                        <img id="img-like" src="./assets/like.png" alt="f" title="f">
+                        <span id="btn-text">Like</span>
                     </button>
                 </div>
                 <div id="img-container"></div>
