add favorite function

--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -47,6 +47,9 @@
 
             <div class="favorite">
                 <h3>Favorites</h3>
+                <div id="favorite-nav">
+
+                </div>
             </div>
 
             <div class="footer">
