--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -20,8 +20,7 @@
                     <h2>Pokemon details for <span id="name"></span>
                     </h2>
                     <button id="btn-like" value="like">
-                        <img id="img-like" src="./assets/like.png" alt="f" title="f">
-                        <span id="btn-text">Like</span>
+                        Add to Favorite
                     </button>
                 </div>
                 <div id="img-container"></div>
