add favorite show detail and remove

--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -46,7 +46,17 @@
 
             <div class="favorite">
                 <h3>Favorites</h3>
+                <div id="manual-nav">
+                    <button id="remove-all">Remove all favorite</button>
+                    <button id="remove">Remove selected favorite</button>
+                    <button id="show-detail">Show selected dteails</button>
+                    
+                    
+                </div>
                 <div id="favorite-nav">
+
+                </div>
+                <div>
 
                 </div>
             </div>
