--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="grid-container">
             <div class="header">
-                <img id="flippokemon" src="./assets/charmander.png" alt="rotate" title="rotate">
+                <img id="flippokemon" src="./assets/charmander.png" alt="flip" title="fltp">
                 <h1>Pokemon Data Viewer </h1>
                 <img id="movepokemon" src="./assets/pngegg.png" alt="move" title="move">
             </div>
@@ -49,15 +49,9 @@
                 <div id="manual-nav">
                     <button id="remove-all">Remove all favorite</button>
                     <button id="remove">Remove selected favorite</button>
-                    <button id="show-detail">Show selected dteails</button>
-                    
-                    
+                    <button id="show-detail">Show selected dteails</button>           
                 </div>
                 <div id="favorite-nav">
-
-                </div>
-                <div>
-
                 </div>
             </div>
 
