--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -19,7 +19,12 @@
                 <div id="main-h2">
                     <h2>Pokemon details for <span id="name"></span>
                     </h2>
-                    <button id="btn-like" value="like">
+                    <!--
+                    <button id="btn-favorite" value="heart" type="button">
+                        <img src="./assets/like.png">
+                    </button>
+                    -->
+                    <button id="btn-like" value="like" type="button">
                         Add to Favorite
                     </button>
                 </div>
@@ -47,9 +52,9 @@
             <div class="favorite">
                 <h3>Favorites</h3>
                 <div id="manual-nav">
-                    <button id="remove-all">Remove all favorite</button>
-                    <button id="remove">Remove selected favorite</button>
-                    <button id="show-detail">Show selected dteails</button>           
+                    <button id="remove-all" type="button">Remove all favorite</button>
+                    <button id="remove" type="button">Remove selected favorite</button>
+                    <button id="show-detail" type="button">Show selected dteails</button>           
                 </div>
                 <div id="favorite-nav">
                 </div>
