change button to image buntton

--- a/web-assignment-pokemon/index.html
+++ b/web-assignment-pokemon/index.html
@@ -17,16 +17,8 @@
 
             <div class="main-content">
                 <div id="main-h2">
-                    <h2>Pokemon details for <span id="name"></span>
-                    </h2>
-                    <!--
-                    <button id="btn-favorite" value="heart" type="button">
-                        <img src="./assets/like.png">
-                    </button>
-                    -->
-                    <button id="btn-like" value="like" type="button">
-                        Add to Favorite
-                    </button>
+                    <h2>Pokemon details for <span id="name"></span></h2>
+                    <input id="btn-heart" value="heart" type="image" src="./assets/heart-plus.png" alt="heart">
                 </div>
                 <div id="img-container"></div>
                 <h3>Pokedex number: #<span id="pokedex">0</span></h3>
